Elastic: Fix timezone element in mobile header overlapping toolbar buttons

--- a/plugins/libkolab/skins/elastic/include/calendar.less
+++ b/plugins/libkolab/skins/elastic/include/calendar.less
@@ -1916,7 +1916,9 @@ body.task-calendar {
     }
 }
 
-.header-title {
+body.task-calendar .header-title {
+    position: relative;
+
     .tz {
         position: absolute;
         bottom: 0;
